--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <a href="#about">About</a>
 <a href="#Skills">Skills</a>
 <a href="#Services">Services</a>
-<a href="#contact">Contact on social-media</a>
+<a href="#contact">social-media</a>
 </div>
 </nav>
 <div class="text">
